Integer Int 오류 수정